--- a/SchoolOfScience/SchoolOfScience/Base.lproj/LaunchScreen.storyboard
+++ b/SchoolOfScience/SchoolOfScience/Base.lproj/LaunchScreen.storyboard
@@ -18,17 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rmit-logo" translatesAutoresizingMaskIntoConstraints="NO" id="1xK-FO-1Rp">
-                                <rect key="frame" x="7.5" y="8.5" width="140" height="50"/>
+                            <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rmit-logo" translatesAutoresizingMaskIntoConstraints="NO" id="1xK-FO-1Rp">
+                                <rect key="frame" x="57.5" y="38.5" width="250" height="90"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="BBK-xh-Xgw"/>
-                                    <constraint firstAttribute="width" constant="140" id="I1g-Gv-ENv"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="LrY-nl-wzd"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="m5e-wu-GYg"/>
+                                    <constraint firstAttribute="height" constant="90" id="BBK-xh-Xgw"/>
+                                    <constraint firstAttribute="width" constant="250" id="I1g-Gv-ENv"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="LrY-nl-wzd"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="90" id="m5e-wu-GYg"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="moG-Rr-gXe">
-                                <rect key="frame" x="16" y="229" width="343" height="209"/>
+                                <rect key="frame" x="16" y="255" width="343" height="209"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="209" id="P9i-oP-z3A"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="SBq-hn-PSJ"/>
@@ -37,15 +37,15 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" name="PartyLetPlain" family="Party LET" pointSize="70"/>
                                 <state key="normal" title="School of Science">
-                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
-                            <constraint firstItem="1xK-FO-1Rp" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-300" id="1Nt-Yi-BGX"/>
-                            <constraint firstItem="1xK-FO-1Rp" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" constant="-110" id="1Sj-W9-0B7"/>
-                            <constraint firstItem="moG-Rr-gXe" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="9bF-h9-9Ld"/>
+                            <constraint firstItem="1xK-FO-1Rp" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-250" id="1Nt-Yi-BGX"/>
+                            <constraint firstItem="1xK-FO-1Rp" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" constant="-5" id="1Sj-W9-0B7"/>
+                            <constraint firstItem="moG-Rr-gXe" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="26" id="9bF-h9-9Ld"/>
                             <constraint firstItem="moG-Rr-gXe" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="nxN-bN-wpi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
