--- a/SchoolOfScience/SchoolOfScience/Base.lproj/Main.storyboard
+++ b/SchoolOfScience/SchoolOfScience/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -308,53 +308,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_person_outline_white_2x" translatesAutoresizingMaskIntoConstraints="NO" id="DjY-8q-pnA">
-                                <rect key="frame" x="16" y="20" width="30" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rmit-logo" translatesAutoresizingMaskIntoConstraints="NO" id="4mp-r5-eCD">
+                                <rect key="frame" x="107" y="31" width="140" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="CR6-eh-O67"/>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="30" id="GXw-e3-HPl"/>
-                                    <constraint firstAttribute="height" constant="30" id="gQz-I2-dsV"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="oOS-pN-RQn"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="tvJ-tc-atu"/>
-                                    <constraint firstAttribute="width" constant="30" id="wqe-31-erU"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Defaut Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mmj-Sa-TP4">
-                                <rect key="frame" x="54" y="25" width="119" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="119" id="UDq-N4-fqm"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="119" id="a09-X0-eRF"/>
-                                    <constraint firstAttribute="height" constant="21" id="ds2-Hg-nrk"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="kmF-LU-qJK"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rmit-logo" translatesAutoresizingMaskIntoConstraints="NO" id="myR-r7-mfm">
-                                <rect key="frame" x="117" y="308" width="140" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="140" id="TdX-wP-f1v"/>
-                                    <constraint firstAttribute="height" constant="50" id="yg5-iP-Y2l"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="5Xh-t3-7y0"/>
+                                    <constraint firstAttribute="height" constant="50" id="6JZ-Ny-nGi"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="140" id="Nw7-FX-NkD"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="V2j-qW-4ct"/>
+                                    <constraint firstAttribute="width" constant="140" id="oQ0-xv-HyF"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="ttp-2j-xFv"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
-                            <constraint firstItem="DjY-8q-pnA" firstAttribute="centerX" secondItem="QxE-Dw-ZQA" secondAttribute="centerX" constant="-156.5" id="0AO-8g-bVK"/>
-                            <constraint firstItem="mmj-Sa-TP4" firstAttribute="centerX" secondItem="QxE-Dw-ZQA" secondAttribute="centerX" constant="-74" id="28O-eR-1mz"/>
-                            <constraint firstItem="mmj-Sa-TP4" firstAttribute="centerY" secondItem="QxE-Dw-ZQA" secondAttribute="centerY" constant="-298" id="Dma-5z-nnL"/>
-                            <constraint firstItem="myR-r7-mfm" firstAttribute="centerX" secondItem="QxE-Dw-ZQA" secondAttribute="centerX" constant="-0.5" id="YUW-Qb-b9a"/>
-                            <constraint firstItem="DjY-8q-pnA" firstAttribute="centerY" secondItem="QxE-Dw-ZQA" secondAttribute="centerY" constant="-298.5" id="ckY-8w-ha4"/>
-                            <constraint firstItem="myR-r7-mfm" firstAttribute="centerY" secondItem="QxE-Dw-ZQA" secondAttribute="centerY" constant="-0.5" id="xCF-gX-b0x"/>
+                            <constraint firstItem="4mp-r5-eCD" firstAttribute="centerX" secondItem="QxE-Dw-ZQA" secondAttribute="centerX" constant="-10.5" id="Nmm-0D-fcw"/>
+                            <constraint firstItem="4mp-r5-eCD" firstAttribute="centerY" secondItem="QxE-Dw-ZQA" secondAttribute="centerY" constant="-277.5" id="gwe-QB-WBQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bvF-NM-sjP"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Calendar" id="n7w-yK-zaT"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="nameLabel" destination="mmj-Sa-TP4" id="xTZ-UQ-5OJ"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cvv-hj-SqA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -522,6 +496,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k0q-oo-LYy">
                                 <rect key="frame" x="16" y="100" width="343" height="518"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="246" id="Yv4-OL-9zd" customClass="NewsTableViewCell" customModule="SchoolOfScience" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="246"/>
@@ -706,6 +681,6 @@
         <image name="ic_mail_outline_white_2x" width="48" height="48"/>
         <image name="ic_person_outline_white_2x" width="48" height="48"/>
         <image name="rmit-building80" width="900" height="600"/>
-        <image name="rmit-logo" width="321.60000610351562" height="111.36000061035156"/>
+        <image name="rmit-logo" width="670" height="232"/>
     </resources>
 </document>
