--- a/SchoolOfScience/SchoolOfScience/Base.lproj/Main.storyboard
+++ b/SchoolOfScience/SchoolOfScience/Base.lproj/Main.storyboard
@@ -494,7 +494,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k0q-oo-LYy">
-                                <rect key="frame" x="16" y="100" width="343" height="518"/>
+                                <rect key="frame" x="16" y="133" width="343" height="485"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -505,18 +505,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="245.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to School of Science" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9nn-E4-Ym5">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to School of Science" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9nn-E4-Ym5">
                                                     <rect key="frame" x="40" y="11" width="263" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="KlP-Xg-Nz7"/>
-                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="263" id="wDG-X1-Yd8"/>
+                                                        <constraint firstAttribute="width" constant="263" id="wDG-X1-Yd8"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AxI-Gg-Ax1">
-                                                    <rect key="frame" x="51.5" y="59" width="240" height="128"/>
+                                                    <rect key="frame" x="51.5" y="91" width="240" height="128"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="128" id="BKk-q3-UQa"/>
@@ -525,7 +525,7 @@
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="AxI-Gg-Ax1" firstAttribute="centerY" secondItem="eoF-Mc-zQj" secondAttribute="centerY" id="58i-q1-NdM"/>
+                                                <constraint firstItem="AxI-Gg-Ax1" firstAttribute="centerY" secondItem="eoF-Mc-zQj" secondAttribute="centerY" constant="32.25" id="58i-q1-NdM"/>
                                                 <constraint firstItem="9nn-E4-Ym5" firstAttribute="centerY" secondItem="eoF-Mc-zQj" secondAttribute="centerY" constant="-91.75" id="5Gq-WK-5Dd"/>
                                                 <constraint firstItem="9nn-E4-Ym5" firstAttribute="centerX" secondItem="eoF-Mc-zQj" secondAttribute="centerX" id="e2p-gi-znM"/>
                                                 <constraint firstItem="AxI-Gg-Ax1" firstAttribute="centerX" secondItem="eoF-Mc-zQj" secondAttribute="centerX" id="m2R-Zd-lyp"/>
@@ -544,8 +544,64 @@
                                     <outlet property="delegate" destination="xiw-Fn-CGe" id="Wfh-UU-kJj"/>
                                 </connections>
                             </tableView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="G5m-yo-9w1">
+                                <rect key="frame" x="16" y="95" width="343" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ANg-vb-MPh">
+                                        <rect key="frame" x="0.0" y="0.0" width="85" height="30"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="0Ku-HM-caS"/>
+                                            <constraint firstAttribute="width" constant="85" id="SWk-Dt-i4K"/>
+                                        </constraints>
+                                        <state key="normal" title="All"/>
+                                        <connections>
+                                            <action selector="allButtonTapped:" destination="xiw-Fn-CGe" eventType="touchUpInside" id="0Ye-uv-HwC"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1WF-dp-QPg">
+                                        <rect key="frame" x="86" y="0.0" width="85" height="30"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="85" id="IES-dx-C1k"/>
+                                            <constraint firstAttribute="height" constant="30" id="dQh-9C-1ro"/>
+                                        </constraints>
+                                        <state key="normal" title="General"/>
+                                        <connections>
+                                            <action selector="generalButtonTapped:" destination="xiw-Fn-CGe" eventType="touchUpInside" id="1hH-go-LkQ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cow-fv-N8u">
+                                        <rect key="frame" x="172" y="0.0" width="85" height="30"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="BJb-9Z-3f4"/>
+                                            <constraint firstAttribute="width" constant="85" id="UPw-jf-nRI"/>
+                                        </constraints>
+                                        <state key="normal" title="Research"/>
+                                        <connections>
+                                            <action selector="researchButtonTapped:" destination="xiw-Fn-CGe" eventType="touchUpInside" id="b1i-37-fgH"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TJ8-ic-h6W">
+                                        <rect key="frame" x="258" y="0.0" width="85" height="30"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="85" id="XL4-d6-9yd"/>
+                                            <constraint firstAttribute="height" constant="30" id="axi-MD-oCn"/>
+                                        </constraints>
+                                        <state key="normal" title="Learning"/>
+                                        <connections>
+                                            <action selector="learningButtonTapped:" destination="xiw-Fn-CGe" eventType="touchUpInside" id="K96-Zx-Q6H"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="343" id="h7B-cQ-us7"/>
+                                </constraints>
+                            </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_person_outline_white_2x" translatesAutoresizingMaskIntoConstraints="NO" id="KYb-WN-c2n">
-                                <rect key="frame" x="16" y="54" width="30" height="30"/>
+                                <rect key="frame" x="16" y="57" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="3k3-g9-5UV"/>
                                     <constraint firstAttribute="height" constant="30" id="PuG-Ac-LtG"/>
@@ -554,7 +610,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Defaut Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvR-2P-5kf">
-                                <rect key="frame" x="54" y="59" width="119" height="21"/>
+                                <rect key="frame" x="54" y="62" width="119" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="S4y-H1-vNA"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="119" id="XK8-YG-thM"/>
@@ -566,21 +622,28 @@
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
+                            <constraint firstItem="G5m-yo-9w1" firstAttribute="centerX" secondItem="8Cq-XV-o98" secondAttribute="centerX" id="6sC-xZ-rbc"/>
                             <constraint firstItem="KYb-WN-c2n" firstAttribute="centerX" secondItem="8Cq-XV-o98" secondAttribute="centerX" constant="-156.5" id="IpH-Gp-TJ7"/>
-                            <constraint firstItem="k0q-oo-LYy" firstAttribute="top" secondItem="hvR-2P-5kf" secondAttribute="bottom" constant="20" id="LWC-Xy-Ra1"/>
+                            <constraint firstItem="k0q-oo-LYy" firstAttribute="top" secondItem="hvR-2P-5kf" secondAttribute="bottom" constant="50" id="LWC-Xy-Ra1"/>
+                            <constraint firstItem="k0q-oo-LYy" firstAttribute="top" secondItem="G5m-yo-9w1" secondAttribute="bottom" constant="8" id="O18-80-1ww"/>
                             <constraint firstItem="Dl7-0X-fcQ" firstAttribute="bottom" secondItem="k0q-oo-LYy" secondAttribute="bottom" id="W7W-BH-kSH"/>
-                            <constraint firstItem="k0q-oo-LYy" firstAttribute="top" secondItem="KYb-WN-c2n" secondAttribute="bottom" constant="16" id="Wgx-dU-V4H"/>
-                            <constraint firstItem="k0q-oo-LYy" firstAttribute="top" secondItem="Dl7-0X-fcQ" secondAttribute="top" constant="80" id="bDg-nf-SH4"/>
+                            <constraint firstItem="k0q-oo-LYy" firstAttribute="top" secondItem="KYb-WN-c2n" secondAttribute="bottom" constant="46" id="Wgx-dU-V4H"/>
+                            <constraint firstItem="k0q-oo-LYy" firstAttribute="top" secondItem="Dl7-0X-fcQ" secondAttribute="top" constant="113" id="bDg-nf-SH4"/>
                             <constraint firstItem="Dl7-0X-fcQ" firstAttribute="trailing" secondItem="k0q-oo-LYy" secondAttribute="trailing" constant="16" id="f5c-XR-bak"/>
                             <constraint firstItem="hvR-2P-5kf" firstAttribute="centerX" secondItem="8Cq-XV-o98" secondAttribute="centerX" constant="-74" id="fGw-FG-8ZH"/>
                             <constraint firstItem="k0q-oo-LYy" firstAttribute="leading" secondItem="Dl7-0X-fcQ" secondAttribute="leading" constant="16" id="p7s-9R-wIB"/>
+                            <constraint firstItem="G5m-yo-9w1" firstAttribute="top" secondItem="hvR-2P-5kf" secondAttribute="bottom" constant="12" id="rqN-Le-0IT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Dl7-0X-fcQ"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="News" id="kMe-z3-tdR"/>
                     <connections>
+                        <outlet property="allButton" destination="ANg-vb-MPh" id="FHS-ID-DXB"/>
+                        <outlet property="generalButton" destination="1WF-dp-QPg" id="A0k-Ec-nyE"/>
+                        <outlet property="learningButton" destination="TJ8-ic-h6W" id="tRG-0T-8oj"/>
                         <outlet property="nameLabel" destination="hvR-2P-5kf" id="S5a-dt-RlH"/>
                         <outlet property="newsTableView" destination="k0q-oo-LYy" id="mOW-Kx-w9Q"/>
+                        <outlet property="researchButton" destination="cow-fv-N8u" id="peT-du-OL4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hrm-vS-CCc" userLabel="First Responder" sceneMemberID="firstResponder"/>
