fix little bug of cell id

--- a/SchoolOfScience/SchoolOfScience/Base.lproj/Main.storyboard
+++ b/SchoolOfScience/SchoolOfScience/Base.lproj/Main.storyboard
@@ -1509,6 +1509,6 @@
         <image name="spiderLogo" width="100" height="100"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="nan-xc-htM"/>
+        <segue reference="k8Q-Hp-Tuh"/>
     </inferredMetricsTieBreakers>
 </document>
